--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,14 @@ extends layout
 block content
   h1= title
   p Welcome to index Pradeep Rao Veeramaneni  #{title}
-  button(type="button", class="btn btn-danger") Press me
+  button(type="button", class="btn btn-danger" onclick="doBump()") Press me
+  div(id="bump") Bump the count
+  script.
+   var count=0;
+   var bump=1;
+   function doBump(){
+    count+=bump;
+    bump+=1;
+    document.getElementById("bump").innerHTML="Count "+count+" Bump "+bump;
+   }
+ 
