all files commit

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,3 +13,4 @@ block content
     bump+=1;
     document.getElementById("bump").innerHTML="Count "+count+" Bump "+bump;
    }
+ a(href="watch") Watch page
