--- a/views/watch.pug
+++ b/views/watch.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  - let watch=[{watch_brand:"Rolex",watch_cost:250,watch_color:"Black"},{watch_brand:"Omega",watch_cost:200,watch_color:"Brown"},{watch_brand:"Bell & Ross",watch_cost:150,watch_color:"Gold"}]
+  - let watch=[{watch_brand:"Fasttrack",watch_color:"Black",watch_cost:350},{watch_brand:"Apple",watch_color:"Brown",watch_cost:250},{watch_brand:"Rolex",watch_color:"blue",watch_cost:120}]
   div(class="container-fluid")
   div(class="row")
    each w,index in watch
