--- a/views/watchdelete.pug
+++ b/views/watchdelete.pug
@@ -31,7 +31,7 @@ block content
   script. 
     function cancel() { 
       // Go back to the home page for the watch collection 
-      window.location.href='/watch' 
+      window.location.href='/watchs' 
     } 
   script. 
     function deleteOnid() { 
