--- a/views/index.pug
+++ b/views/index.pug
@@ -1,16 +1,12 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to index Pradeep Rao Veeramaneni  #{title}
-  button(type="button", class="btn btn-danger" onclick="doBump()") Press me
-  div(id="bump") Bump the count
-  script.
-   var count=0;
-   var bump=1;
-   function doBump(){
-    count+=bump;
-    bump+=1;
-    document.getElementById("bump").innerHTML="Count "+count+" Bump "+bump;
-   }
-  a(href="watch") Watch page
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/watchs") Take me to watch 
+    br 
+    a(href="/logout") Logout 
