--- a/views/watchupdate.pug
+++ b/views/watchupdate.pug
@@ -15,13 +15,13 @@ block content
   form(id='WatchForm', action=actionid, method="PUT")
    div.form-group
     label.watchAttr(for='watch_brand') Watch Brand
-    input#watch_brand(type='text', name='watch_brand')
+    input#watch_brand(type='text', name='watch_brand',value= watch_brand)
    div.form-group
     label.watchAttr(for='watch_cost') Watch Cost
-    input#watch_cost(type='number', name='watch_cost')
+    input#watch_cost(type='number', name='watch_cost',value= watch_cost)
    div.form-group
     label.watchAttr(for='watch_color') Watch Color
-    input#watch_color(type='text', name='watch_color')
+    input#watch_color(type='text', name='watch_color', value= watch_color)
    input(type="submit")
   script.
     document.forms['WatchForm'].addEventListener('submit', (event) => {
